sandbox/output
MedicineClashTest.java:36: error: constructor Medicine in class Medicine cannot be applied to given types;
        medicines.add(new Medicine("Codeine", prescriptions));
                      ^
  required: no arguments
  found: String,Set<Prescription>
  reason: actual and formal argument lists differ in length
1 error
